--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="background">
         <!--Com o deserto de fundo que irá se mover-->
         <div class="dino">
+            <!--Ajustando o dinossauro na tela-->
             
         </div>
     </div>
