--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dino Game</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="./img/dino.png">
 </head>
 <body>
     <div class="background">
         <!--Com o deserto de fundo que irá se mover-->
         <div class="dino">
             <!--Ajustando o dinossauro na tela-->
-            
+
         </div>
     </div>
     <script src="script.js" charset="UTF-8" defer></script>
